[package]
name = "tag_db_wrapper"
version = "0.1.0"
authors = ["coco <coco@hexgolems.com>"]

description = "Wrappers for the tag db interval database"

# These URLs point to more information about the repository
#documentation = "..."
#homepage = "https://github.com/ranmrdrakono/interval_tree"
#repository = "..."

keywords = ["interval","range","spatial","database","db","ruby","ffi"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "GPL-2.0"

#rand = "*" # Or a specific version
#time = "*"

[dependencies.tag_db]
git = "https://github.com/eqv/tag_db"

[dependencies.interval_tree]
git = "https://github.com/eqv/interval_tree"

[lib]
name = "tag_db_wrapper"
crate-type = ["dylib"]
